--- a/com.automation.aws.testing/test-output/old/Default suite/classes.html
+++ b/com.automation.aws.testing/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.automation.aws.testing.test.HandleTestDataUsingExcel</td>
+<td>com.automation.aws.testing.test.GenericMethodForSelectDropdown</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>EnterGoogleSearch</td>
+<td>DemoTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
