--- a/com.automation.aws.core/test-output/old/Default suite/classes.html
+++ b/com.automation.aws.core/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.automation.aws.utility.ExtentReport</td>
+<td>com.automation.aws.utility.ConfigFileReader</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>extentreport</td>
+<td>ReadConfigProperty</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
