--- a/com.automation.aws.core/test-output/old/Default suite/methods.html
+++ b/com.automation.aws.core/test-output/old/Default suite/methods.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d384ee">  <td>20/02/19 17:12:36</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;ExtentReport.Pre_report()[pri:0, instance:com.automation.aws.utility.ExtentReport@4cdbe50f]">&gt;&gt;Pre_report</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@434091818</td>   <td></td> </tr>
-<tr bgcolor="d384ee">  <td>20/02/19 17:12:37</td>   <td>931</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExtentReport.extentreport()[pri:0, instance:com.automation.aws.utility.ExtentReport@4cdbe50f]">extentreport</td> 
-  <td>main@434091818</td>   <td></td> </tr>
-<tr bgcolor="d384ee">  <td>20/02/19 17:12:37</td>   <td>990</td> <td>&nbsp;</td><td title="&lt;&lt;ExtentReport.exit_report()[pri:0, instance:com.automation.aws.utility.ExtentReport@4cdbe50f]">&lt;&lt;exit_report</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@434091818</td>   <td></td> </tr>
+<tr bgcolor="916c74">  <td>20/12/15 17:53:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConfigFileReader.ReadConfigProperty()[pri:0, instance:com.automation.aws.utility.ConfigFileReader@3d680b5a]">ReadConfigProperty</td> 
+  <td>main@49752459</td>   <td></td> </tr>
 </table>
