--- a/com.automation.aws.testing/test-output/old/Default suite/methods-alphabetical.html
+++ b/com.automation.aws.testing/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c2937c">  <td>20/12/13 22:59:50</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Driver.setUp()[pri:0, instance:test.CheckTextIsBold@29626d54]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@667821226</td>   <td></td> </tr>
-<tr bgcolor="c2937c">  <td>20/12/13 23:00:08</td>   <td>18574</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Driver.tearDown(org.testng.ITestResult)[pri:0, instance:test.CheckTextIsBold@29626d54]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@667821226</td>   <td></td> </tr>
-<tr bgcolor="8a809c">  <td>20/12/13 23:00:02</td>   <td>12207</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckTextIsBold.test()[pri:0, instance:test.CheckTextIsBold@29626d54]">test</td> 
-  <td>main@667821226</td>   <td></td> </tr>
+<tr bgcolor="a0aefb">  <td>21/03/02 17:14:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImplementPagefactoryTest.Test()[pri:0, instance:test.ImplementPagefactoryTest@61eaec38]">Test</td> 
+  <td>main@28597262</td>   <td></td> </tr>
+<tr bgcolor="a8e175">  <td>21/03/02 17:14:25</td>   <td>-4603</td> <td>&nbsp;</td><td title="&gt;&gt;Driver.setUp()[pri:0, instance:test.ImplementPagefactoryTest@61eaec38]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@28597262</td>   <td></td> </tr>
+<tr bgcolor="a8e175">  <td>21/03/02 17:14:37</td>   <td>7154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Driver.tearDown(org.testng.ITestResult)[pri:0, instance:test.ImplementPagefactoryTest@61eaec38]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@28597262</td>   <td></td> </tr>
 </table>
